--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="secondary">
+  <ion-navbar color="primary">
     <ion-title>{{ title }}</ion-title>
   </ion-navbar>
 </ion-header>
