--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,12 +1,15 @@
 <ion-header>
   <ion-navbar color="primary">
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
     <ion-title>{{ title }}</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
-  <h3>You're now in {{ title }} page</h3>
+  <h3>{{ title }}</h3>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
