--- a/src/pages/sub-options-without-icons/sub-option-three/sub-option-three.html
+++ b/src/pages/sub-options-without-icons/sub-option-three/sub-option-three.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-navbar color="primary">
-      <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
-        </button>
-    <ion-title>{{ title }}</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Sub Option 3</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
-  <h3>{{ title }}</h3>
+  <h3>Sub Option 3</h3>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
