Add support for multiple suboptions with the same name

--- a/src/pages/with-icons/with-icons-sub-option-two/with-icons-sub-option-two.html
+++ b/src/pages/with-icons/with-icons-sub-option-two/with-icons-sub-option-two.html
@@ -3,13 +3,13 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Sub Option 4</ion-title>
+    <ion-title>Sub Option 2</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
-  <h3>Sub Option 4</h3>
+  <h3>With Icons: Sub Option 2</h3>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
